Dependencias seguridad Spring

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
+api/tramites/src/main/resources/application.properties
+api/tramites/src/main/resources/application.properties
