--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
+api/tramites/src/main/resources/application.properties
