--- a/api/tramites/src/main/resources/application.properties
+++ b/api/tramites/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=BD_PC_Grupo7_U
 spring.datasource.password=/NM67]HS-/dVp%[
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 server.port=8989
+app.admin-user=admin
+app.password=Una2020
+
 
 
