--- a/api/tramites/src/main/resources/application.properties
+++ b/api/tramites/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 server.port=8989
-app.admin-user=admin
+app.admin-user=lujepa2
 app.password=Una2020
 
 
