Implementacion del jwt realizada
Listo para añadir las últimas entidades

--- a/api/tramites/src/main/resources/application.properties
+++ b/api/tramites/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.show-sql=true
 server.port=8989
 app.admin-user=lujepa2
 app.password=Una2020
+jwt.secret=asDj@h-78Rjh7_9$dajEhui#28
+jwt.expiration=36000
+
 
 
 
