--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
 api/tramites/src/main/resources/application.properties
+api/tramites/src/main/resources/application.properties
